--- a/src/app/components/edit-anime/edit-anime.component.html
+++ b/src/app/components/edit-anime/edit-anime.component.html
@@ -1,4 +1,4 @@
-<div class="edit-anime py-2 py-md-5 px-1 px-md-5">
+<div class="edit-anime py-2 py-md-5 px-1 px-md-5 color-shade">
     <div class="text-center py-4" *ngIf="!loaded">
         <div class="spinner-border" role="status">
             <span class="sr-only">Loading...</span>
