--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row" *ngIf="loaded">
     <div *ngFor="let anime of animeList" class="col-md-6 col-lg-3 py-4">
-        <div class="card card-shadow" (click)="openAnimeDetail(anime)">
+        <div class="card card-shadow h-100" (click)="openAnimeDetail(anime)">
             <img src="{{ anime.imagePath }}" alt="{{ anime.name }} image" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title"> {{ anime.name }}</h5>
