--- a/src/app/components/edit-anime/edit-anime.component.html
+++ b/src/app/components/edit-anime/edit-anime.component.html
@@ -68,7 +68,7 @@
                             <button class="btn btn-outline-dark" (click)="addImages()" type="button">Add More
                                 Images?</button>
                             <div class="row pt-3" formArrayName="images">
-                                <div class="col-md-4 px-0 pr-md-2 pt-3"
+                                <div class="col-md-4 col-lg-3 px-0 pr-md-2 pt-3"
                                     *ngFor="let image of images.controls; let i = index;">
                                     <label>Image Path :</label>
                                     <input type="text" class="form-control" [formControlName]="i">
@@ -99,23 +99,12 @@
                 <button class="btn btn-outline-dark" (click)="addSeason()">Add Seasons?</button>
             </div>
             <div class="row w-100">
-                <div class="col-md-6 pt-3" *ngFor="let season of anime.seasons">
+                <div class="col-md-6 pt-3 px-0" *ngFor="let season of anime.seasons">
                     <div class="row">
-                        <div class="col-5 pointer" data-toggle="collapse" attr.data-target="#season{{ season.number }}"
-                            role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
-                            <label class="font-weight-bold">Season {{ season.number }}</label><span class="pl-1 mb-1"><i
-                                    class="fa fa-chevron-down"></i></span>
-                        </div>
+                        <label class="col-5 font-weight-bold">Season {{ season.number }}</label>
                         <div class="col-7 text-left">
                             <button class="btn btn-outline-dark" (click)="editSeason(season.number)">Edit
                                 Season?</button>
-                        </div>
-                        <div class="col-12 collapse" id="season{{season.number}}">
-                            <div class="row" *ngFor="let episode of season.episodes">
-                                <div class="col-12 py-2">
-                                    <h5>Episode {{ episode.number }} : {{ episode.title}}</h5>
-                                </div>
-                            </div>
                         </div>
                     </div>
 
