--- a/src/app/components/anime/anime-detail/anime-detail.component.html
+++ b/src/app/components/anime/anime-detail/anime-detail.component.html
@@ -95,7 +95,7 @@
                     <div class="color-shade py-3 px-3 pointer" data-toggle="collapse"
                         attr.data-target="#season{{ season.number }}" role="button" aria-expanded="false"
                         aria-controls="multiCollapseExample1" (click)="rotate($event,season.number)">
-                        <h4 class="text-dark my-0">Season {{ season.number }} <span class="float-right"><i
+                        <h4 class="text-dark text-center my-0">Season {{ season.number }} <span class="float-right"><i
                                     class="fa fa-chevron-down rotate" id="season{{ season.number }}-chevron"></i></span>
                         </h4>
                     </div>
