--- a/src/app/components/admin/edit/edit-seasons/edit-seasons.component.html
+++ b/src/app/components/admin/edit/edit-seasons/edit-seasons.component.html
@@ -13,13 +13,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 py-3" *ngFor="let episode of anime.seasons[seasonNumber-1].episodes">
+                <div class="col-md-6 col-lg-4 py-3" *ngFor="let episode of anime.seasons[seasonNumber-1].episodes">
                     <div class="row border h-100 py-3 color-shade">
                         <div class="col-12 px-0">
                             <div class="row pb-2">
                                 <label class="col-6">
                                     <strong>Episode {{ episode.number }} : {{ episode.title }}</strong></label>
-                                <div class="col-6 text-center">
+                                <div class="col-6 text-right">
                                     <button class="btn btn-outline-dark" (click)="editEpisode(episode.number)">Edit
                                         Episode?</button>
                                 </div>
