--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,4 +1,11 @@
-.search-icon{
+.search-icon {
     position: absolute;
     right: 25px;
+}
+
+@media (max-width: 991px) {
+    .navbar-brand {
+        margin: 0 auto;
+        transform: translateX(-25%);
+    }
 }
