--- a/src/app/components/anime/home/home.component.html
+++ b/src/app/components/anime/home/home.component.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <div class="row" *ngIf="loaded">
-    <div *ngFor="let anime of animeList" class="col-md-6 col-lg-3 py-4">
+    <div *ngFor="let anime of animeList" class="col-md-6 col-lg-3 py-2 py-md-3 py-lg-4">
         <div class="card card-shadow h-100" (click)="openAnimeDetail(anime)">
             <img src="{{ anime.imagePath }}" alt="{{ anime.name }} image" class="card-img-top">
             <div class="card-body">
